# lazy-list

./: .gitignore  Makefile  README.md  README.rst  pyproject.toml
.github/workflows/: lint.yaml  unit-test.yaml
lazy_list/: __init__.py  eager_list.py  lazy_list.py  num_list.py  str_list.py  wrappers.py
tests/: test_eager_list.py  test_lazy_list.py  test_numlist.py  test_str_list.py  test_xlist.py
xlist/: classes.py
