[tool.poetry]
name = "lazy_list"
version = "0.1.0"
description = ""
authors = ["Pooya Darvehei <pooya.darvehei@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
toolz = "^0.12.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^22.8.0"
flake8 = "^5.0.4"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
